// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/molecules/RegisterButton Default 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained RegisterButton__StyledComponent-sc-1dh9qne-0 frlHCm MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Default
  </span>
</button>
`;

exports[`Storyshots components/molecules/RegisterButton Primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained RegisterButton__StyledComponent-sc-1dh9qne-0 frlHCm MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Primary
  </span>
</button>
`;

exports[`Storyshots components/molecules/RegisterButton Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained RegisterButton__StyledComponent-sc-1dh9qne-0 frlHCm MuiButton-containedSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Secondary
  </span>
</button>
`;
